; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libprocstat/extr_libprocstat.c_procstat_getvmmap.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libprocstat/extr_libprocstat.c_procstat_getvmmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kinfo_vmentry = type { i32 }
%struct.procstat = type { i32, i32 }
%struct.kinfo_proc = type { i32 }

@.str = private unnamed_addr constant [28 x i8] c"kvm method is not supported\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"unknown access method: %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.kinfo_vmentry* @procstat_getvmmap(%struct.procstat* %0, %struct.kinfo_proc* %1, i32* %2) #0 {
  %4 = alloca %struct.kinfo_vmentry*, align 8
  %5 = alloca %struct.procstat*, align 8
  %6 = alloca %struct.kinfo_proc*, align 8
  %7 = alloca i32*, align 8
  store %struct.procstat* %0, %struct.procstat** %5, align 8
  store %struct.kinfo_proc* %1, %struct.kinfo_proc** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load %struct.procstat*, %struct.procstat** %5, align 8
  %9 = getelementptr inbounds %struct.procstat, %struct.procstat* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %25 [
    i32 129, label %11
    i32 128, label %13
    i32 130, label %19
  ]

11:                                               ; preds = %3
  %12 = call i32 (i8*, ...) @warnx(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  store %struct.kinfo_vmentry* null, %struct.kinfo_vmentry** %4, align 8
  br label %30

13:                                               ; preds = %3
  %14 = load %struct.kinfo_proc*, %struct.kinfo_proc** %6, align 8
  %15 = getelementptr inbounds %struct.kinfo_proc, %struct.kinfo_proc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32*, i32** %7, align 8
  %18 = call %struct.kinfo_vmentry* @kinfo_getvmmap(i32 %16, i32* %17)
  store %struct.kinfo_vmentry* %18, %struct.kinfo_vmentry** %4, align 8
  br label %30

19:                                               ; preds = %3
  %20 = load %struct.procstat*, %struct.procstat** %5, align 8
  %21 = getelementptr inbounds %struct.procstat, %struct.procstat* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load i32*, i32** %7, align 8
  %24 = call %struct.kinfo_vmentry* @kinfo_getvmmap_core(i32 %22, i32* %23)
  store %struct.kinfo_vmentry* %24, %struct.kinfo_vmentry** %4, align 8
  br label %30

25:                                               ; preds = %3
  %26 = load %struct.procstat*, %struct.procstat** %5, align 8
  %27 = getelementptr inbounds %struct.procstat, %struct.procstat* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 (i8*, ...) @warnx(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i32 %28)
  store %struct.kinfo_vmentry* null, %struct.kinfo_vmentry** %4, align 8
  br label %30

30:                                               ; preds = %25, %19, %13, %11
  %31 = load %struct.kinfo_vmentry*, %struct.kinfo_vmentry** %4, align 8
  ret %struct.kinfo_vmentry* %31
}

declare dso_local i32 @warnx(i8*, ...) #1

declare dso_local %struct.kinfo_vmentry* @kinfo_getvmmap(i32, i32*) #1

declare dso_local %struct.kinfo_vmentry* @kinfo_getvmmap_core(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
